# myOS-template

./: .clang-format  .gdbinit  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  build.py  configure.py
cmake/: iso.cmake  kernel-flags.cmake  nasm.cmake  output-dirs.cmake
cmake/toolchains/: i686-elf-cross.cmake  native-gcc-12-m32.cmake
myOS/: CMakeLists.txt
myOS/arch/x86/: CMakeLists.txt
myOS/arch/x86/boot/: multiboot.asm
myOS/arch/x86/include/myOS/arch/: boot.h  multiboot2.h
myOS/kernel/: CMakeLists.txt
myOS/kernel/core/: Kernel.cpp  Timer.cpp  main.cpp  panic.cpp
myOS/kernel/core/memory/: PhysicalMemory.cpp
myOS/kernel/core/peripherals/: Display.cpp  Logger.cpp
myOS/kernel/include/myOS/kernel/: Display.h  IO.h  Kernel.h  Logger.h  Panic.h  Timer.h
myOS/kernel/include/myOS/kernel/memory/: PhysicalMemory.h
myOS/libs/: CMakeLists.txt
myOS/libs/include/: ctype.h  math.h  memory.h  stdio.h  stdlib.h  string.h
myOS/libs/src/: ctype.cpp  libgcc.cpp  math.cpp  memory.cpp  stdio.cpp  stdlib.cpp  string.cpp
myOS/linker/: x86.ld
myOS/platform/grub/: grub.cfg
myOS/sdk/: CMakeLists.txt
myOS/sdk/include/myOS/: Brush.h  Color.h  Font.h  FrameBuffer.h  TextRenderer.h  types.h
myOS/sdk/src/: Brush.cpp  Color.cpp  Font.cpp  FrameBuffer.cpp  TextRenderer.cpp
scripts/: export_glyphs.py  list_devices.ps1
